# commodore-pet-clone

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md  build.sh  setup.sh  sim-video.bat  sim.bat  sim.sh  term.sh
.devcontainer/: Dockerfile  devcontainer.json  gdb
docs/: datasheets.md  devcontainer.md  git.md  pico.md  pmod.md  spi.md  todo.md  tools.md  video.md
docs/fpga/: README.md  ep2.md  guidelines.md  spi.md  t8.md
docs/pet/: compat.md  ram.md  roms.md  schematics.md  timing.md  video.md
fw/: CMakeLists.txt  README.md  driver.c  driver.h  global.c  global.h  hw.h  main.c  pch.h  pet.c  pet.h  roms.h  test.c  test.h  tusb_config.h
fw/dvi/: dvi.c  dvi.h
fw/fpga/: bitstream.h  bitstream.sh  fpga.c  fpga.h
fw/roms/: roms.sh
fw/sd/: sd.c  sd.h
fw/usb/: hid_app.c  keyboard.c  keyboard.h  msc_app.c  usb.c  usb.h
gw/PET/: PET.peri.xml  PET.xml
gw/PET/sim/: main_tb.sv  sim.sv  spi1_driver.sv  spi1_tb.sv  spi_driver.sv  spi_tb.sv
gw/PET/src/: main.sv  spi.sv  timing.sv  top.sv
gw/PET/src/utils/: edge_detect.sv  sync2.sv  sync2_edge_detect.sv
hw/: PET.bak  PET.kicad_sym
hw/Mainboard/: Audio.kicad_sch  CASS.kicad_sch  CPLD.kicad_sch  CPU.kicad_sch  DVI.kicad_sch  FLASH.kicad_sch  FPGA.kicad_sch  FPGA_CFG.kicad_sch  IEEE.kicad_sch  IO.kicad_sch  Keyboard.kicad_sch  MAGIC.kicad_sch  MCU.kicad_sch  MIT.kicad_mod  Mainboard-cache.lib  Mainboard-rescue.lib  Mainboard.kicad_pcb  Mainboard.kicad_pro  Mainboard.kicad_sch  Mainboard.sch  MicroSD.kicad_sch  PET.dcm  PET.lib  POWER.kicad_sch  SN74LS07DR.lib  SOIC127P600X175-14N.kicad_mod  USB.kicad_sch  USER.kicad_sch  VIDEO.kicad_sch  fp-lib-table  pattern.kicad_mod  sym-lib-table
hw/Mainboard/PET.pretty/: APEM_MJTP1117.kicad_mod  BarrelJack_Horizontal.kicad_mod  CP_Radial_D16.0mm_P5.00mm_P7.50mm.kicad_mod  CP_Radial_D18.0mm_P5.00mm_P7.50mm.kicad_mod  EDGE_CON_12P_TAPE.kicad_mod  EDGE_CON_24P_IEEE.kicad_mod  EDGE_CON_24P_USER.kicad_mod  EconoPET_Model.kicad_mod  EconoPET_QR.kicad_mod  Keyboard_Header_1x20_P2.54mm_Vertical.kicad_mod  L_10.4x11.4_H4.kicad_mod  MIT.kicad_mod  NetTie-2_SMD_Pad_0.28.kicad_mod  NetTie-2_SMD_Pad_0.4_to_0.28mm.kicad_mod  NetTie-2_SMD_Pad_0.4_to_0.2mm.kicad_mod  NetTie-2_SMD_Pad_1.6_to_0.4mm.kicad_mod  PET_MountingHole_4mm.kicad_mod  PET_POWER_Molex_KK-396_A-41791-0009_1x09_P3.96mm_Vertical.kicad_mod  PET_SPEAKER.kicad_mod  PET_Video.kicad_mod  PMOD_Socket_2x06_P2.54mm_Horizontal.kicad_mod  PinHeader_and_Jumper_1x03_P2.54mm_Vertical.kicad_mod  QFP50P2200X2200X160-144N.kicad_mod  R_0805_or_THT.kicad_mod  Raspberry Pi Zero W 2.kicad_mod  Raspberry Pi Zero W.kicad_mod  SOT-23-3L.kicad_mod  STX31205B.kicad_mod  SW-TH_L6.0-W3.5-P6.50.kicad_mod  TO-252-2_ThermalVias.kicad_mod  V1100SMDBL.kicad_mod  V1100SMDBL_or_573100D00000G.kicad_mod
hw/Mainboard/PET.pretty/packages3d/: 573100D00010G.stp  640384-9.stp  CON-SOCJ-2155.stp  KEY-TH_SKHLLBA010.wrl
hw/Mainboard/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
roms/: CMakeLists.txt
rtl/: PET.qsf  PET.sdc  address_decoding.v  assert.svh  bus.sv  bus.v  control.sv  crtc.sv  crtc.v  crtc.vh  edge_detect.sv  keyboard.sv  keyboard.v  main.sv  main.v  main_tb.sv  pe_pulse.sv  pia1.v  pll.v  pll_bb.v  spi.sv  spi.v  spi_bridge.sv  spi_buffer.sv  spi_driver.sv  sync.sv  sync.v  tb_address_decoding.sv  tb_address_decoding.v  tb_bus.sv  tb_bus.v  tb_common.sv  tb_common.v  tb_crtc.sv  tb_crtc.v  tb_crtc_sync_gen.sv  tb_keyboard.v  tb_spi.sv  tb_spi.v  tb_spi_bridge.sv  (+19 more)
rtl/ep2/: PET.qpf  PET.qsf  PET.sdc  PET.srf  address_decoding.sv  control.sv  crtc.sv  crtc.vh  main.sv  main_tb.sv  pe_pulse.sv  spi_bridge.sv  spi_buffer.sv  tb_crtc.sv  tb_dotgen.sv  tb_edge_detect.sv  tb_spi_common.vh  tb_video.sv  test.sh  timing.sv  top.sv  video1.sv  video2.sv
rtl/scripts/: PostModule.tcl
rtl/t8/PET/: PET.peri.new.xml  PET.peri.xml  PET.xml  main.sv  top.sv
rtl/t8/PET/outflow/: PET.chain.xml
rtl/t8/PET/sim/: PET_tb.sv  address_decoding_tb.sv  audio_driver.sv  audio_tb.sv  crtc_driver.sv  crtc_tb.sv  mock_cpu.sv  mock_mcu.sv  spi_driver.sv  top_driver.sv  video_tb.sv
rtl/t8/PET/src/: PET.sdc  address_decoding.sv  audio.sv  control.sv  keyboard.sv  main.sv  spi.sv  timing.sv  top.sv  video.sv  video_crtc.sv  video_dotgen.sv
sw/: CMakeLists.txt
sw/cmake/: cross-rpi.cmake  cross-rpi0w2.cmake
sw/src/: Makefile  display.cpp  display.hpp  driver.cpp  driver.hpp  enum.hpp  gpio.cpp  gpio.hpp  main.cpp  pch.hpp  roms.hpp  trace.cpp  trace.hpp
